force-app/main/default/objects/Deal_Field_Validations__mdt/Deal_Field_Validations__mdt.object-meta.xml
<CustomObject>
    <label>Deal Field Validation</label>
    <pluralLabel>Deal Field Validations</pluralLabel>
</CustomObject>