force-app/main/default/objects/Deal_Field_Validations__mdt/fields/FieldLabels__c.field-meta.xml
<CustomField>
    <fullName>FieldLabels__c</fullName>
    <label>Field Labels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>