force-app/main/default/objects/Deal_Field_Validations__mdt/fields/FieldNames__c.field-meta.xml
<CustomField>
    <fullName>FieldNames__c</fullName>
    <label>Field Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>