force-app/main/default/objects/Deal_Field_Validations__mdt/fields/FromStage__c.field-meta.xml
<CustomField>
    <fullName>FromStage__c</fullName>
    <label>From Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Committee</fullName>
                <default>true</default>
                <label>Approved by Committee</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Data Tape Received</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Issue Term Sheet/Order Appraisal</fullName>
            </value>
            <value>
                <fullName>Loan Processing</fullName>
            </value>
            <value>
                <fullName>Matured</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted to Underwriting</fullName>
            </value>
            <value>
                <fullName>Term Sheet Issued</fullName>
            </value>
            <value>
                <fullName>Term Sheet Signed/Deposit Collected</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>UW Hold</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>