force-app/main/default/objects/Deal_Field_Validations__mdt/fields/Validation_Type__c.field-meta.xml
<CustomField>
    <fullName>Validation_Type__c</fullName>
    <label>Validation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required Fields</fullName>
                <default>true</default>
                <label>Required Fields</label>
            </value>
            <value>
                <fullName>Record Exists</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>